@@ -9,6 +9,7 @@ import org.springframework.context.annotation.Bean;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 
 @SpringBootApplication
 public class ReservationServiceApplication {
@@ -24,8 +25,19 @@ public class ReservationServiceApplication {
                     .restaurantId(1L)
                     .clientId(1L)
                     .waiterId(2L)
+                    .commandId(1L)
                     .reservationTime(LocalDateTime.now())
                     .numGuests(4)
+                    .build();
+
+            Reservation reservation11 = Reservation.builder()
+                    .tableIds(Arrays.asList(5L, 6L))
+                    .restaurantId(1L)
+                    .clientId(3L)
+                    .waiterId(4L)
+                    .commandId(3L)
+                    .reservationTime(LocalDateTime.now())
+                    .numGuests(3)
                     .build();
 
             Reservation reservation2 = Reservation.builder()
@@ -33,11 +45,22 @@ public class ReservationServiceApplication {
                     .restaurantId(2L)
                     .clientId(2L)
                     .waiterId(3L)
+                    .commandId(2L)
                     .reservationTime(LocalDateTime.now())
                     .numGuests(3)
                     .build();
 
-            reservationRepository.saveAll(Arrays.asList(reservation1, reservation2));
+            Reservation reservation21 = Reservation.builder()
+                    .tableIds(List.of(7L))
+                    .restaurantId(2L)
+                    .clientId(3L)
+                    .waiterId(3L)
+                    .commandId(4L)
+                    .reservationTime(LocalDateTime.now())
+                    .numGuests(2)
+                    .build();
+
+            reservationRepository.saveAll(Arrays.asList(reservation1, reservation2, reservation11, reservation21));
         };
     }
 
